tests/invalid/shadowing_error/shadow_linear_let_outer_not_consumed.facet
fn f() -> unrestricted isize {
    let x: linear isize = 42;
    let x: unrestricted isize = 100;
    x
}
